--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer><span>@2017 - Ben Jackson</span></footer>
+<footer><span>Made with <a href="https://github.com/dyutibarma/monochrome">Monochrome</a> theme.</span></footer>
