--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="header" class="parent justify-spaceBetween">
   <div class="inner w100 relative">
     <span class="f-left">
-      <a href="{{ site.baseurl }}/">
+      <a href="/">
         <h1>
-          Home
+          Writings on code <span>| Ben Jackson</span>
         </h1>
       </a>
     </span>
