--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,2 @@
-<a href="mailto:bjackson2@gmail.com">Email</a>
+<a href="mailto:ben@writingsoncode.com">Email</a>
 <a href="https://github.com/bjackson2">Github</a>
