--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <nav id="nav">
   <div id="nav-list">
-    <a href="{{ site.baseurl }}/">Home</a>
+    <a href="{{ site.baseurl }}">Home</a>
     {% for page in site.pages %}
     {% if page.layout == "page" %}
     <a href="{% if site.baseurl == "/" %}{{ page.url }}{% else %}{{ page.url | prepend: site.baseurl }}{% endif %}" title="{{ page.title }}">{{ page.title }}</a>
