Adds styling tweaks - links, spacing

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer><span>Made with <a href="https://github.com/dyutibarma/monochrome">Monochrome</a> theme.</span></footer>
+<footer><span>Made with <a href="https://github.com/dyutibarma/monochrome" target="_blank">Monochrome</a> theme.</span></footer>
