--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,3 +1,3 @@
 <a href="/about">About me</a>
 <a href="mailto:ben@writingsoncode.com">Email</a>
-<a href="https://github.com/bjackson2">Github</a>
+<a href="https://github.com/bjackson2" target="_blank">Github</a>
