Fixes mobile title and code block styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <span class="f-left">
       <a href="/" class="dark">
         <h1>
-          Writings on code <span>| Ben Jackson</span>
+          Writings on code <span class="subtitle">| Ben Jackson</span>
         </h1>
       </a>
     </span>
