--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -55,6 +55,12 @@ blockquote {
   }
 }
 
+@media (max-width: 600px) {
+  span.subtitle {
+    display: none;
+  }
+}
+
 /*- Typography for big screen, based on 18px font-size -*/
 
 @media (min-width: 940px) { //Breakpoint set to 940px
