--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,12 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | replace: '//', '/' }}">
   <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png?">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-99016451-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
